# geturl-test

./: Cargo.toml  README.md
src/: curl.rs  lib.rs  plain.rs  reqwest.rs  reqwest_impersonate.rs  status_base.rs
