# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_geturl"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A generic interface for HTTP GETs and byte-range requests, with pluggable backends.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_geturl"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "geturl"

[dependencies]
anyhow = "1.0.62"
cfg-if = "^1.0"
curl = { version = "^0.4", optional = true }
reqwest = { version = "^0.11", optional = true, features = ["blocking"] }

[features]
default = ["reqwest"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
